# PyLMS

./: .gitignore  Makefile  PROJECT_RATIONAL.md  README.md  pyproject.toml  relationships.db.save  requirements.txt  setup.cfg  sonar-project.properties
.github/workflows/: androlms-build.yml  pylms-build.yml
android/: .gitignore  README.md  build.gradle.kts  build.sh  keystore_to_base64.sh  settings.gradle.kts
android/app/: build.gradle.kts  keystore.jks
android/app/src/androidTest/java/fr/javatronic/lms/android/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/fr/javatronic/lms/android/: MainActivity.kt
android/app/src/main/java/fr/javatronic/lms/android/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/fr/javatronic/lms/core/: Core.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/fr/javatronic/lms/android/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
python/: Makefile  README.md  pyproject.toml  setup.cfg
python/src/pylms/: cli.py  core.py  gui.py  python_utils.py  storage.py
python/tests/pylms/: pymls_test.py  storage_test.py  test_python_utils.py
src/pylms/: __main__.py  cli.py  core.py  gui.py  pylms.py  storage.py
tests/pylms/: cli_test.py  core_test.py  gui_test.py  main_test.py  pylms_protected_test.py  pymls_test.py  storage_test.py
