[metadata]
name = PyLMS
version = 0.1.0
description = Fight my "Lacune Mémorielle Sociale"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE
author = Sébastien Lesaint
author_email = sebastien.lesaint@gmail.com
project_urls =
    Source = https://github.com/lesaint/PyLMS
keywords =

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_version = >=3.6, <4

[options.packages.find]
where = src
exclude = tests

[options.entry_points]
console_scripts =
    pylms = pylms.__main__:main

[options.extras_require]
test = 
    pytest