[project]
name = "PyLMS"
dynamic = ["version", "description", "dependencies", "scripts", "readme", "authors", "keywords", "urls"]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage"
]

[build-system]
requires = ["setuptools>40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.coverage.run]
source = [
    "pylms",
]
relative_files = true

[tool.coverage.path]
source = [
    "src/pylms",
    "**/site-packages/pylms",
]

